--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@ body {
     padding: 0;
 }
 
+/* navigaatio sisennys */
+nav ul {
+    list-style-type: none; 
+    padding: 0; 
+    margin: 0; 
+    text-align: center; 
+}
+
 /* Otsikoiden tyylit */
 h1, h2, h3 {
     color: #333;
